--- a/RabbitMessenger/app/src/main/res/values/strings.xml
+++ b/RabbitMessenger/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">RabbitMessenger</string>
     <string name="title_activity_login">Sign in</string>
 
-    <!-- Strings related to login -->
+    <!-- Strings relatedusernameogin -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
