--- a/RabbitMessenger/app/src/main/res/values/strings.xml
+++ b/RabbitMessenger/app/src/main/res/values/strings.xml
@@ -106,4 +106,9 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_contacts">Contacts</string>
+    <string name="title_activity_base_navigation_drawer">BaseNavigationDrawerActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
